CSS-fix, aligne innholdet på tom side etter design

--- a/src/components/emptyVarselList/EmptyVarselList.module.css
+++ b/src/components/emptyVarselList/EmptyVarselList.module.css
@@ -14,12 +14,11 @@
 .ingenVarslerTekstWrapper{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin-left: 2.5rem;
 }
 
 .text{
   display: flex;
-  align-items: center;
 }
 
 .header{
@@ -28,13 +27,23 @@
 
 .body{
   margin-bottom: 1.5rem !important;
-  text-align: center;
-
 }
 
 @media (max-width: 800px) {
   .innerWrapper {
     padding-bottom: 3.875rem;
     padding-top: 2.5rem;
-  } 
+    flex-direction: column;
+  }
+
+  .ingenVarslerTekstWrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0rem;
+  }
+  
+  .body{
+    text-align: center;
+  }
 }
